--- a/snotes/index.html
+++ b/snotes/index.html
@@ -27,6 +27,7 @@
     <li><a href="https://mosubaga.github.io/qnotes" target="_blank">Intro to Perl, Python, and Golang</a></li>
     <li><a href="https://mosubaga.github.io/bnotes" target="_blank">Intro to Shell Scripting</a></li>
     <li><a href="https://mosubaga.github.io/jnotes" target="_blank">Intro to Julia</a></li>
+    <li><a href="https://mosubaga.github.io/sqlnotes" target="_blank">Intro to SQL</a></li>
 </ul>
 </div>
 <p>Once you get familiar with scripting, you can move on to other topics.</p>
