--- a/fft/index.html
+++ b/fft/index.html
@@ -17,7 +17,6 @@
     </nav>
     <article>
         <h1 id="tufte-css">Introduction</h1>
-        <a style="font-size: large;" href="/fft/remake" target="_blank">Open Ivalice Chronicle Page</a>
         <section>
             <p>Sword in hand, a warrior clutches stone to breast. In sword etched he his fading memories. In stone, his tempered skill. By sword attested, by stone revealed. Their tale can now be told.</p>
         </section>
@@ -29,6 +28,7 @@
             <p>Two independent armies, the Order of the Northern Sky led by Prince Larg—brother of Queen Louveria—and the Order of the Southern Sky led by Duke Goltanna, are rival forces. They fight for control of the monarchy, hoping to take control of King Ondoria's child successor to use as a puppet to rule Ivalice. The king has two children, his teenage adopted half-sister, Princess Ovelia, and the young Prince Orinus. </p>
             <p>The princess, off in the Orbonne Monastery, is targeted by forces of the Southern Sky's Order. Ramza Beoulve, a sellsword under the greedy Goffard Gaffgarion, is hired to protect her, working with Ovelia's bodyguards, led by Agrias Oaks. The mercenaries and the bodyguards defeat the forces sent by the Northern Sky, but the princess is captured by Delita Heiral, Ramza's childhood friend. When Ramza spots Delita again, he reminisces of the time that led to Delita's disappearance and Ramza's casting off his family name.</p>
         </section>
+        <h3><a style="font-size: large;" href="/fft/remake" target="_blank">Open Ivalice Chronicle Page</a></h3>
     </article>
     <footer>
         Final Fantasy Tactics © 1997, 2007, 2023, 2025 Square Enix Co., Ltd. All rights reserved. This is an unofficial fan guide.
