--- a/snotes/index.html
+++ b/snotes/index.html
@@ -37,6 +37,7 @@
 <ul>
     <li><a href="https://mosubaga.github.io/mlnotes" target="_blank">Intro to Machine Learning</a></li>
     <li><a href="https://mosubaga.github.io/dlnotes" target="_blank">Intro to Deep Learning</a></li>
+    <li><a href="https://mosubaga.github.io/pyplnotes" target="_blank">Tips on Python and Perl</a></li>
 </ul>
 </div>
 </main>
