Modified index page

--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
             </div>
             <br />
 
+            <div class="imgcontainer">
+                <img src="./img/building_food_sushi.png" width="200" height="180"/>
+                <img src="./img/building_food_soba.png" width="200" height="180"/>
+                <img src="./img/building_food_unagi.png" width="200" height="180"/>
+                <img src="./img/building_onigiri_shop.png" width="200" height="180"/>
+                <img src="./img/building_food_tenpura.png" width="200" height="180"/>
+            </div>
+            <br />
             <div>
                 <section
                     style="
