--- a/snotes/index.html
+++ b/snotes/index.html
@@ -35,6 +35,7 @@
 <div class="card">
   <h4>If you are interested in other topics once you get familiar with scripting:</h4>
 <ul>
+    <li><a href="https://mosubaga.github.io/jscheatsheet" target="_blank">Intro to Javascript/Typescript</a></li>
     <li><a href="https://mosubaga.github.io/mlnotes" target="_blank">Intro to Machine Learning</a></li>
     <li><a href="https://mosubaga.github.io/dlnotes" target="_blank">Intro to Deep Learning</a></li>
     <li><a href="https://mosubaga.github.io/pyplnotes" target="_blank">Tips on Python and Perl</a></li>
