Add weather widget

--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
                 </center>
             </div>
             <br />
+            <div class="weather-report">
+            <a class="weatherwidget-io" href="https://forecast7.com/en/42d28n71d42/framingham/?unit=us" data-label_1="FRAMINGHAM" data-label_2="WEATHER" data-theme="original" >FRAMINGHAM WEATHER</a>
+            <script>
+                !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+            </script>             
+            </div>
 
             <div class="imgcontainer">
                 <img src="./img/building_food_sushi.png" width="200" height="180"/>
