--- a/python.html
+++ b/python.html
@@ -39,11 +39,47 @@
 
         <h3 style="text-align:center">Python</h3>
 
-        <div>Textual information is the most important form of data in almost every application. In an online shopping website, we use text to provide production descriptions.
-            Textual data, as well as files and numeric data, can all be saved as text files, reading which all requires us to process strings. We know that machine learning is trending,
-            and one critical machine learning specialty is termed natural language processing (NLP). NLP is concerned with extracting information from texts.
-            Because of this, text processing is an inevitable step in preparing the data in these applications. In short, there are numerous real-life cases where we need to process
-            and format strings properly.</div><br>
+        <div>Python is a high-level, general-purpose programming language known for its readable syntax and broad ecosystem.
+            It runs on all major platforms and is used for web development, automation, data science, and scripting at scale.</div><br>
+
+        <h4>History</h4>
+        <div>
+          Python was created by Guido van Rossum and first released in 1991. It was designed with readability and
+          developer productivity in mind, drawing inspiration from ABC and other languages. Python 2 gained wide
+          adoption in the 2000s, and Python 3 (released in 2008) introduced a cleaner, more consistent language
+          design. The community completed the migration from Python 2 in 2020, consolidating modern development
+          on Python 3.
+        </div><br>
+        <div>
+          The Python Package Index (PyPI) and tools like pip helped make Python one of the most accessible ecosystems
+          for libraries and applications. The language continues to evolve through regular releases with a strong
+          emphasis on backward compatibility and performance improvements.
+        </div><br>
+
+        <h4>Usage and strengths</h4>
+        <div>
+          Python is popular for web development, data science, automation, scripting, and scientific computing.
+          Its clean syntax makes it a common first language, while its libraries power production workloads in
+          machine learning, data engineering, and cloud automation.
+        </div><br>
+        <div>
+          Typical use cases include ETL pipelines, web APIs, data analysis notebooks, and developer tooling.
+          Frameworks like Django and Flask are widely used, while libraries such as NumPy, pandas, and scikit-learn
+          dominate the data ecosystem.
+        </div><br>
+
+        <h4>Current state and relevance</h4>
+        <div>
+          Python remains one of the most widely used languages in industry and education. It is a default choice
+          for data-centric work and prototyping, with active maintenance and a large, supportive community.
+          Performance has improved with each release, and tools such as type hints and linters make large codebases
+          more maintainable.
+        </div><br>
+        <div>
+          Is Python still relevant to learn? Yes. It is widely used in backend services, automation, and data
+          workflows, and is often required for machine learning. Even when other languages are chosen for production
+          performance, Python is frequently used for orchestration, research, and tooling.
+        </div><br>
 
         <p>Here is an example of how to get a file list from an assigned directory recursively.</p>
 
