--- a/books.html
+++ b/books.html
@@ -80,6 +80,12 @@
       getbooks("manning","Python","python-manning");
     </script>
 
+    <h4>Typescript books from O'reilly Media</h4>
+    <div id="typescript-oreilly"></div>
+    <script>
+      getbooks("oreilly","Typescript","typescript-oreilly");
+    </script>
+
     </div><!-- /.container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
