--- a/snotes/index.html
+++ b/snotes/index.html
@@ -25,6 +25,7 @@
 <div class="card">
 <ul>
     <li><a href="https://mosubaga.github.io/qnotes" target="_blank">Intro to Perl, Python, and Golang</a></li>
+    <li><a href="./debugtips/" target="_blank">Debugging Perl, Python, and Golang Scripts</a></li>
     <li><a href="https://mosubaga.github.io/bnotes" target="_blank">Intro to Shell Scripting</a></li>
     <li><a href="https://mosubaga.github.io/jnotes" target="_blank">Intro to Julia</a></li>
     <li><a href="https://mosubaga.github.io/sqlnotes" target="_blank">Intro to SQL</a></li>
