--- a/index.html
+++ b/index.html
@@ -176,7 +176,14 @@
                     <div>
                         <a href="./redsoxhistory" target="_blank">Red Sox Players of the past</a>
                     </div>
+                    <div>
+                        <a href="./mlsites/rmvdetector.html" target="_blank">RMV SPAM Detector</a>
+                    </div>
+                    <div>
+                        <a href="./mlsites/strikeouts.html" target="_blank">Strikeout Forecasting</a>
+                    </div>
                 </section>
+                <br>
         </div>
         <!-- /.container -->
         <script>
