--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
                     <div>
                         <a href="./mlsites/strikeouts.html" target="_blank">Strikeout Forecasting</a>
                     </div>
+                    <div>
+                        <a href="./sleuth" target="_blank">Sleuth around the world</a>
+                    </div>
+                    <div>
+                        <a href="./mp" target="_blank">Quick guide to Mary Poppins</a>
+                    </div>
                 </section>
                 <br>
         </div>
